--- a/One piece.html
+++ b/One piece.html
@@ -22,7 +22,7 @@
 
     <div id="ar-container">
       <a-scene
-        mindar-image="imageTargetSrc: A.Pegatinas/targets.mind"
+        mindar-image="imageTargetSrc: A.Pegatinas/ONE PIECE/Zoro/targets.mind"
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
