--- a/One piece.html
+++ b/One piece.html
@@ -19,7 +19,7 @@
   <body>
     <div id="ar-container">
       <a-scene
-        mindar-image="imageTargetSrc: A.Pegatinas/ONE PIECE/Zoro/targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1;"
+        mindar-image="imageTargetSrc: A.Pegatinas/ONE PIECE/targets.mind; filterMinCF: 0.05; filterBeta: 5; warmupTolerance: 1; missTolerance: 1;"
         color-space="sRGB"
         embedded
         renderer="colorManagement: true, physicallyCorrectLights"
