--- a/One piece.html
+++ b/One piece.html
@@ -5,7 +5,7 @@
     <title>MindAR - Llaveros animados</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Versiones compatibles -->
+    <!-- Librerías necesarias -->
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image.prod.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aframe@1.4.2/dist/aframe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.1.4/dist/mindar-image-aframe.prod.js"></script>
@@ -49,7 +49,7 @@
         <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
         <!-- Target Zoro -->
-        <a-entity mindar-image-target="targetIndex: 0" id="zoro-target">
+        <a-entity mindar-image-target="targetIndex: 0">
           <a-image
             id="zoro-image"
             src="#zoro0"
@@ -61,61 +61,49 @@
         </a-entity>
 
         <!-- Target Sanji -->
-<a-entity mindar-image-target="targetIndex: 1" id="sanji-target">
-  <a-image
-    id="sanji-image"
-    src="#sanji0"
-    position="0 0 0"
-    width="1"
-    height="1"
-  ></a-image>
-</a-entity>
+        <a-entity mindar-image-target="targetIndex: 1">
+          <a-image
+            id="sanji-image"
+            src="#sanji0"
+            position="0 0 0"
+            width="1"
+            height="1"
+            frame-animation="frames: #sanji0,#sanji1,#sanji2,#sanji3,#sanji4,#sanji5,#sanji6; interval: 150"
+          ></a-image>
+        </a-entity>
 
-<!-- Activar animación solo al detectar el target -->
-<script>
-  AFRAME.registerComponent('frame-animation', {
-    schema: {
-      frames: { type: 'string' },
-      interval: { type: 'int', default: 150 }
-    },
-    init: function () {
-      this.frames = this.data.frames.split(',');
-      this.current = 0;
-      this.intervalId = null;
-    },
-    play: function () {
-      if (this.intervalId) return;
-      this.intervalId = setInterval(() => {
-        this.el.setAttribute('src', this.frames[this.current]);
-        this.current = (this.current + 1) % this.frames.length;
-      }, this.data.interval);
-    },
-    pause: function () {
-      if (this.intervalId) {
-        clearInterval(this.intervalId);
-        this.intervalId = null;
-      }
-    },
-    remove: function () {
-      this.pause();
-    }
-  });
-
-  // Esperar a que cargue la escena
-  document.addEventListener("DOMContentLoaded", () => {
-    const sanjiTarget = document.querySelector("#sanji-target");
-    const sanjiImage = document.querySelector("#sanji-image");
-
-    sanjiTarget.addEventListener("targetFound", () => {
-      sanjiImage.setAttribute("frame-animation", "frames: #sanji0,#sanji1,#sanji2,#sanji3,#sanji4,#sanji5,#sanji6; interval: 150");
-    });
-
-    sanjiTarget.addEventListener("targetLost", () => {
-      sanjiImage.removeAttribute("frame-animation");
-    });
-  });
-</script>
-
+        <!-- Componente de animación -->
+        <script>
+          AFRAME.registerComponent('frame-animation', {
+            schema: {
+              frames: { type: 'string' },
+              interval: { type: 'int', default: 150 }
+            },
+            init: function () {
+              this.frames = this.data.frames.split(',');
+              this.current = 0;
+              this.intervalId = null;
+              this.el.addEventListener('targetFound', this.play.bind(this));
+              this.el.addEventListener('targetLost', this.pause.bind(this));
+            },
+            play: function () {
+              if (this.intervalId) return;
+              this.intervalId = setInterval(() => {
+                this.el.setAttribute('src', this.frames[this.current]);
+                this.current = (this.current + 1) % this.frames.length;
+              }, this.data.interval);
+            },
+            pause: function () {
+              if (this.intervalId) {
+                clearInterval(this.intervalId);
+                this.intervalId = null;
+              }
+            },
+            remove: function () {
+              this.pause();
+            }
+          });
+        </script>
       </a-scene>
     </div>
   </body>
