--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="eevee.html">Keychains</a></li>
-							<li><a href="Pegatinas.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="Llaveros.html">Keychains</a></li>
+							<li><a href="Pegatinas.html">Pegatinas</a></li>
+							<li><a href="generic.html">Otros</a></li>
+							<li><a href="elements.html">Otros 1</a></li>
 						</ul>
 					</nav>
 
@@ -54,8 +54,8 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="eevee.html">
-										<h2>Eevee</h2>
+									<a href="Llaveros.html">
+										<h2>Llaveros</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
