--- a/Llaveros.html
+++ b/Llaveros.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>Llaveros</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,17 +21,9 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
-								</a>
-
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
-
+								<p class="logo">
+									<span class="symbol"><img src="images/Logo_Inkbits.png" alt="" /></span><span class="title">| Llaveros</span>
+								</p>
 						</div>
 					</header>
 
@@ -40,10 +32,10 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="Llaveros.html">Keychains</a></li>
+							<li><a href="Pegatinas.html">Pegatinas</a></li>
+							<li><a href="generic.html">Otros</a></li>
+							<li><a href="elements.html">Otros 1</a></li>
 						</ul>
 					</nav>
 
@@ -51,19 +43,27 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>This is Phantom, a free, fully responsive site<br />
-								template designed by <a href="http://html5up.net">HTML5 UP</a>.</h1>
-								<p>Etiam quis viverra lorem, in semper lorem. Sed nisl arcu euismod sit amet nisi euismod sed cursus arcu elementum ipsum arcu vivamus quis venenatis orci lorem ipsum et magna feugiat veroeros aliquam. Lorem ipsum dolor sit amet nullam dolore.</p>
+								<h1> Titulo para poner cosas</h1>
+								<p>Subtitulo</p>
 							</header>
+							<div class="filter-bar" style="margin-bottom:20px;">
+                                <label for="filter">Filter by:</label>
+                                <select id="filter">
+                                    <option value="all">All</option>
+                                    <option value="one piece">One Piece</option>
+                                    <option value="pokemon">Pokemon</option>
+                                    <option value="winx club">Winx Club</option>
+                                </select>
+							</div>
 							<section class="tiles">
-								<article class="style1">
+								<article class="style1" data-tag="pokemon">
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="A.llaveros/Eevee/Eevee-1.png"/>
 									</span>
-									<a href="generic.html">
-										<h2>Magna</h2>
+									<a href="Web-Llaveros/eevee.html">
+										<h2>Eevee</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p></p>
 										</div>
 									</a>
 								</article>
@@ -71,10 +71,10 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="Web-Llaveros/frieren.html">
+										<h2>Frieren</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p></p>
 										</div>
 									</a>
 								</article>
@@ -241,6 +241,20 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script>
+ 				 document.getElementById("filter").addEventListener("change", function() {
+   				 const value = this.value.toLowerCase();
+   				 const tiles = document.querySelectorAll(".tiles article");
 
+    			tiles.forEach(tile => {
+      				const tag = tile.getAttribute("data-tag");
+      				if (value === "all" || (tag && tag.toLowerCase() === value)) {
+       					 tile.style.display = "block";
+     			 } else {
+        				tile.style.display = "none";
+      				}
+   				 });
+ 				 });
+			</script>
 	</body>
 </html>
