--- a/Web-Llaveros/eevee.html
+++ b/Web-Llaveros/eevee.html
@@ -12,7 +12,7 @@
 
     <style>
       body { margin: 0; overflow: hidden; }
-      #ar-container { width: 100vw; height: 100vh; }
+      #ar-container { width: 100%; height: 100%; }
     </style>
   </head>
 
